@@ -602,3 +602,6 @@
 	- enabled DTD validation when reading -listsoftware output
 	- added filter check to only try to run compatible -listsoftware entries
 	- added detection of duplicated ramsize entries
+	
+	create_report
+	- pass the file descriptor as parameter to PRINT_INFO
